--- a/package.json
+++ b/package.json
@@ -9,24 +9,36 @@
     "build": "tsc -p tsconfig.json",
     "check-env": "node -e 'require(\"./dist/config/env\").checkEnv()'",
     "start": "node dist/server.js",
-    "prod": "forever start --uid \"${PWD##*/}\" --append dist/server.js"
+    "prod": "forever start --uid \"${PWD##*/}\" --append dist/server.js",
+    "watch-lint": "esw --ext .ts src -w",
+    "watch-ts": "tsc -p tsconfig.json -w",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "lint": "eslint --ext .ts src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/uuid": "^9.0.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "apollo-server-express": "^3.12.0",
     "concurrently": "^8.2.0",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-watch": "^8.0.0",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "apollo-server": "^3.12.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.7.1",
+    "mongoose": "^8.0.2",
     "tslog": "^4.9.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   }
 }
