--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.507.0",
+    "@aws-sdk/client-s3": "^3.507.0",
+    "@aws-sdk/lib-dynamodb": "^3.507.0",
     "apollo-server": "^3.12.0",
     "bcrypt": "^5.1.1",
     "graphql": "^16.7.1",
-    "mongoose": "^8.0.2",
-    "tslog": "^4.9.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   }
 }
