--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.16",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
@@ -37,9 +41,12 @@
     "@aws-sdk/client-dynamodb": "^3.507.0",
     "@aws-sdk/client-s3": "^3.507.0",
     "@aws-sdk/lib-dynamodb": "^3.507.0",
+    "@types/express-serve-static-core": "^4.17.43",
     "apollo-server": "^3.12.0",
     "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
     "graphql": "^16.7.1",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   }
