--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "@aws-sdk/client-dynamodb": "^3.507.0",
     "@aws-sdk/client-s3": "^3.507.0",
     "@aws-sdk/lib-dynamodb": "^3.507.0",
+    "@types/redis": "^4.0.11",
     "apollo-server": "^3.12.0",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.2",
+    "redis": "^4.6.13",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   }
