--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@aws-sdk/client-dynamodb": "^3.507.0",
     "@aws-sdk/client-s3": "^3.507.0",
     "@aws-sdk/lib-dynamodb": "^3.507.0",
+    "@types/bluebird": "^3.5.42",
     "@types/redis": "^4.0.11",
     "apollo-server": "^3.12.0",
     "bcrypt": "^5.1.1",
+    "bluebird": "^3.7.2",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.2",
